--- a/src/app/shared/banner/banner.component.html
+++ b/src/app/shared/banner/banner.component.html
@@ -1,1 +1,4 @@
-<p>banner works!</p>
+<!-- figure: tag responsável por guardar dentro dela uma imagem -->
+<figure class="banner">
+  <img [src]="src" [alt]="alt" />
+</figure>
