--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<app-header></app-header>
-<app-banner
-  src="assets/imagens/banner-homepage.png"
-  alt="Banner homepage"
-></app-banner>
+<app-header></app-header> <router-outlet></router-outlet>
