feat(banner): add required

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,3 +5,7 @@
 <app-container>
   <h1>HOME</h1>
 </app-container>
+<app-banner
+  src="assets/imagens/banner-homepage-rodape.png"
+  alt="Banner do rodapé"
+></app-banner>
