--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,9 +1,25 @@
 .app-footer {
-  .footer {
-    background-color: #1d1b20;
-    color: white;
-    padding: 32px 256px;
+  background-color: black;
+  color: white;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  .inner {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    img {
+      max-width: 100%;
+      max-height: 40px;
+    }
+    ul {
+      padding: 0;
+      list-style: none;
+      &.socials {
+        li {
+          text-align: center;
+        }
+      }
+    }
   }
 }
