feat(home): add busca and depoimento

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,21 @@
   alt="Banner homepage"
 ></app-banner>
 <app-container>
-  <h1>HOME</h1>
+  <h2>Promoções</h2>
+  <div class="card-wrapper">
+    <app-card-busca></app-card-busca>
+    <app-card-busca></app-card-busca>
+    <app-card-busca></app-card-busca>
+    <app-card-busca></app-card-busca>
+    <app-card-busca></app-card-busca>
+    <app-card-busca></app-card-busca>
+  </div>
+  <h2>Depoimentos</h2>
+  <div class="card-wrapper">
+    <app-card-depoimentos></app-card-depoimentos>
+    <app-card-depoimentos></app-card-depoimentos>
+    <app-card-depoimentos></app-card-depoimentos>
+  </div>
 </app-container>
 <app-banner
   src="assets/imagens/banner-homepage-rodape.png"
