--- a/src/app/shared/form-busca/form-busca.component.html
+++ b/src/app/shared/form-busca/form-busca.component.html
@@ -31,5 +31,28 @@
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
     </div>
+
+    <!-- Datas -->
+    <div class="flex-container">
+      <mat-form-field class="input-container" appearance="outline">
+        <mat-label>Data de ida</mat-label>
+        <input matInput [matDatepicker]="ida" placeholder="Selecione" />
+        <mat-datepicker-toggle
+          matIconSuffix
+          [for]="ida"
+        ></mat-datepicker-toggle>
+        <mat-datepicker #ida></mat-datepicker>
+      </mat-form-field>
+      <mat-form-field class="input-container" appearance="outline">
+        <mat-label>Data de volta</mat-label>
+        <input matInput [matDatepicker]="volta" placeholder="Selecione" />
+        <mat-datepicker-toggle
+          matIconSuffix
+          [for]="volta"
+        ></mat-datepicker-toggle>
+        <mat-datepicker #volta></mat-datepicker>
+      </mat-form-field>
+      <button mat-flat-button color="primary">BUSCAR</button>
+    </div>
   </form>
 </app-card>
