--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -6,21 +6,40 @@
         <li><strong>Adultos</strong></li>
         <li>(Acima de 12 anos)</li>
         <li>
-          <button mat-mini-fab color="basic">
-            <img
-              src="assets/icones/do_not_disturb_on.png"
-              alt="Operador de subtração"
-            />
-          </button>
+          <app-botao-controle operacao="decrementar"></app-botao-controle>
           <span>1</span>
-          <button mat-mini-fab color="basic">
-            <img src="assets/icones/add_circle.png" alt="Operador de adição" />
-          </button>
+          <app-botao-controle operacao="incrementar"></app-botao-controle>
+        </li>
+      </ul>
+      <ul>
+        <li><strong>Crianças</strong></li>
+        <li>(Entre 2 e 11 anos)</li>
+        <li>
+          <app-botao-controle operacao="decrementar"></app-botao-controle>
+          <span>1</span>
+          <app-botao-controle operacao="incrementar"></app-botao-controle>
+        </li>
+      </ul>
+      <ul>
+        <li><strong>Bebês</strong></li>
+        <li>(Até 2 anos)</li>
+        <li>
+          <app-botao-controle operacao="decrementar"></app-botao-controle>
+          <span>1</span>
+          <app-botao-controle operacao="incrementar"></app-botao-controle>
         </li>
       </ul>
     </div>
+    <div class="selecao-categoria">
+      <p><strong>Categoria</strong></p>
+      <mat-chip-listbox aria-label="Seleção de passagens">
+        <mat-chip-option selected>1 adulto</mat-chip-option>
+        <mat-chip-option>Econômica</mat-chip-option>
+      </mat-chip-listbox>
+    </div>
   </div>
-  <div mat-dialog-actions>
-    <button mat-button mat-dialog-close>Close</button>
+  <div mat-dialog-actions class="modal-actions">
+    <button mat-flat-button mat-dialog-close>Cancelar</button>
+    <button color="primary" mat-flat-button>Confirmar</button>
   </div>
 </section>
