--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -38,9 +38,14 @@
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
+    gap: 24px;
     button {
-      margin: 0 8px;
-      width: 100%;
+      height: 36px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
+      flex: 1 0 0;
     }
   }
 }
