--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,12 +6,10 @@
   <h2>Promoções</h2>
   <app-form-busca></app-form-busca>
   <div class="card-wrapper">
-    <app-card-busca></app-card-busca>
-    <app-card-busca></app-card-busca>
-    <app-card-busca></app-card-busca>
-    <app-card-busca></app-card-busca>
-    <app-card-busca></app-card-busca>
-    <app-card-busca></app-card-busca>
+    <app-card-busca
+      *ngFor="let item of promocaos | async"
+      [promocao]="item"
+    ></app-card-busca>
   </div>
   <h2>Depoimentos</h2>
   <div class="card-wrapper">
