--- a/src/app/shared/form-busca/form-busca.component.html
+++ b/src/app/shared/form-busca/form-busca.component.html
@@ -1,13 +1,24 @@
 <app-card variant="secondary" class="form-busca">
-  <form>
+  <form [formGroup]="formBuscarService.formBusca">
     <h2>Passagens</h2>
     <div class="flex-container">
-      <mat-button-toggle-group aria-label="Tipo de passagem">
-        <mat-button-toggle>
-          <mat-icon>check</mat-icon>
+      <mat-button-toggle-group
+        aria-label="Tipo de passagem"
+        formControlName="somenteIda"
+      >
+        <mat-button-toggle [value]="false">
+          <mat-icon
+            *ngIf="!formBuscarService.formBusca.get('somenteIda')?.value"
+            >check</mat-icon
+          >
           IDA E VOLTA
         </mat-button-toggle>
-        <mat-button-toggle>SOMENTE IDA</mat-button-toggle>
+        <mat-button-toggle [value]="true">
+          <mat-icon *ngIf="formBuscarService.formBusca.get('somenteIda')?.value"
+            >check</mat-icon
+          >
+          SOMENTE IDA</mat-button-toggle
+        >
       </mat-button-toggle-group>
       <mat-chip-listbox
         (click)="openDialog()"
