--- a/src/app/shared/form-busca/form-busca.component.html
+++ b/src/app/shared/form-busca/form-busca.component.html
@@ -29,25 +29,18 @@
       </mat-chip-listbox>
     </div>
     <div class="flex-container">
-      <mat-form-field class="input-container" appearance="outline">
-        <mat-label>Origem</mat-label>
-        <mat-icon matPrefix>flight_takeoff</mat-icon>
-        <input matInput placeholder="Origem" />
-        <mat-icon matSuffix>search</mat-icon>
-      </mat-form-field>
+      <app-dropdown-uf
+        label="Origem"
+        iconePrefix="flight_takeoff"
+      ></app-dropdown-uf>
       <button mat-icon-button>
         <mat-icon>sync_alt</mat-icon>
       </button>
-      <mat-form-field class="input-container" appearance="outline">
-        <mat-label>Destino</mat-label>
-        <mat-icon matPrefix>flight_land</mat-icon>
-        <input matInput placeholder="Destino" />
-        <mat-icon matSuffix>search</mat-icon>
-      </mat-form-field>
-    </div>
+      <app-dropdown-uf
+        label="Destino"
+        iconePrefix="flight_land"
+      ></app-dropdown-uf>
 
-    <!-- Datas -->
-    <div class="flex-container">
       <mat-form-field class="input-container" appearance="outline">
         <mat-label>Data de ida</mat-label>
         <input matInput [matDatepicker]="ida" placeholder="Selecione" />
