--- a/src/app/shared/card-depoimentos/card-depoimentos.component.html
+++ b/src/app/shared/card-depoimentos/card-depoimentos.component.html
@@ -1,10 +1,10 @@
 <mat-card class="depoimento">
   <mat-card-content>
-    <img [src]="src" [alt]="alt" />
+    <img [src]="depoimento.avatar" alt="Imagem da {{ depoimento.autor }}" />
     <ul>
-      <li>{{ depoimento }}</li>
+      <li>{{ depoimento.texto }}</li>
       <li>
-        <strong>{{ autoria }}</strong>
+        <strong>{{ depoimento.autor }}</strong>
       </li>
     </ul>
   </mat-card-content>
