--- a/src/app/shared/form-busca/dropdown-uf/dropdown-uf.component.html
+++ b/src/app/shared/form-busca/dropdown-uf/dropdown-uf.component.html
@@ -5,7 +5,7 @@
   <mat-icon matSuffix>search</mat-icon>
   <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
     <mat-option
-      *ngFor="let option of filteredOptions | async"
+      *ngFor="let option of filteredOptions$ | async"
       [value]="option.nome"
     >
       {{ option.nome }}
