--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -33,8 +33,22 @@
     <div class="selecao-categoria">
       <p><strong>Categoria</strong></p>
       <mat-chip-listbox aria-label="Seleção de passagens">
-        <mat-chip-option selected>1 adulto</mat-chip-option>
-        <mat-chip-option>Econômica</mat-chip-option>
+        <mat-chip-option
+          value="Econômica"
+          [selected]="
+            formBuscaService.formBusca.get('tipo')?.value === 'Econômica'
+          "
+          (selectionChange)="formBuscaService.alterarTipo($event, 'Econômica')"
+          >Econômica</mat-chip-option
+        >
+        <mat-chip-option
+          value="Executivo"
+          [selected]="
+            formBuscaService.formBusca.get('tipo')?.value === 'Executivo'
+          "
+          (selectionChange)="formBuscaService.alterarTipo($event, 'Executivo')"
+          >Executivo</mat-chip-option
+        >
       </mat-chip-listbox>
     </div>
   </div>
