--- a/src/app/shared/form-busca/dropdown-uf/dropdown-uf.component.scss
+++ b/src/app/shared/form-busca/dropdown-uf/dropdown-uf.component.scss
@@ -1,3 +1,7 @@
 .input-container {
   margin-bottom: -1.25em;
 }
+/* src/app/shared/form-busca/dropdown-uf/dropdown-uf.component.scss */
+.mat-mdc-form-field {
+  max-width: 230px;
+}
